# MLOps_RecruitAIr_Dispatcher

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  pyproject.toml
.github/workflows/: build-on-tag.yaml  test-on-pr.yaml  test-on-push.yaml
alembic/: env.py
alembic/versions/: f55297a43c54_.py
assets/: prometheus.yml
assets/api-mocks/mocks/: collections.yml
assets/api-mocks/mocks/routes/evaluator/: eval.yml
assets/grafana/dashboards/: recruitair-dispatcher-api.json  recruitair-dispatcher.json
recruitair/: test.py
recruitair/api/: __init__.py  database.py  main.py  schemas.py
recruitair/api/monitoring/: applicants.py  criteria.py  job_offers.py  scores.py
recruitair/api/resources/: __init__.py  applicants.py  criteria.py  job_offers.py  scores.py
recruitair/api/schemas/: __init__.py
recruitair/database/: __init__.py  db_settings.py
recruitair/database/models/: __init__.py  applicant.py  applicant_score.py  criterion.py  job_offer.py
recruitair/workers/: __init__.py  common_settings.py
recruitair/workers/evaluator/: __init__.py  __main__.py  applicant_evaluation.py  evaluator_settings.py
recruitair/workers/evaluator/monitoring/: __init__.py
recruitair/workers/extractor/: __init__.py  __main__.py  criteria_extraction.py  extractor_settings.py
recruitair/workers/extractor/monitoring/: __init__.py
scripts/: create_examples.py
tests/: conftest.py  test_api.py  test_health_endpoint.py
tests/api/: test_applicant_endpoints.py  test_criteria_endpoints.py  test_job_offer_endpoints.py  test_score_endpoints.py
(+1 files in other folders)
